src/objects/bofc__BOFCOBFieldsDetails__c.object
<CustomObject>
    <fields>
        <fullName>bofc__BOFCOBDetails__c</fullName>
        <label>BOFCOBDetails</label>
        <referenceTo>bofc__BOFCOBDetails__c</referenceTo>
        <relationshipLabel>BOFCOBFieldsDetails</relationshipLabel>
        <relationshipName>BOFCOBFieldsDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bofc__Created_By_ID__c</fullName>
        <label>Created_By_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Created_Date__c</fullName>
        <label>Created_Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Desc__c</fullName>
        <label>Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__ExternalID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExternalID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__HelpText__c</fullName>
        <label>HelpText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Last_Modified_By_ID__c</fullName>
        <label>Last_Modified_By_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Last_Modified_Date__c</fullName>
        <label>Last_Modified_Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__PICKWrapperValue__c</fullName>
        <label>PICKWrapperValue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Unique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__defaultValue__c</fullName>
        <label>defaultValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__description__c</fullName>
        <label>description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bofc__formula__c</fullName>
        <label>formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__globalPicklistValueSet__c</fullName>
        <label>globalPicklistValueSet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__inlineHelpText__c</fullName>
        <label>inlineHelpText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bofc__isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__label__c</fullName>
        <label>label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__precision__c</fullName>
        <label>precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__referenceTo__c</fullName>
        <label>referenceTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__scale__c</fullName>
        <label>scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__summaryOperation__c</fullName>
        <label>summaryOperation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__trackHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>trackHistory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__type_x__c</fullName>
        <label>type_x</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__visibleLines__c</fullName>
        <label>visibleLines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BOFCOBFieldsDetails</label>
    <nameField>
        <label>BOFCOBFieldsDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCOBFieldsDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>